--- a/streamlit_app/.streamlit/secrets.toml
+++ b/streamlit_app/.streamlit/secrets.toml
@@ -1,3 +1,6 @@
+[connections.sqlite]
+url = 'sqlite:///mydb.db'
+
 [connections.mssql_dev]
 url = 'mssql+pymssql://sa:Password!@localhost/mydb_dev'
 
