--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,8 +1,5 @@
 [connections.sqlite]
 url = 'sqlite:///mydb.db'
 
-[connections.mssql_dev]
-url = 'mssql+pymssql://sa:Password!@localhost/mydb_dev'
-
-[connections.mssql_uat]
-url = 'mssql+pymssql://sa:Password!@localhost/mydb_uat'
+[connections.mssql]
+url = 'mssql+pymssql://sa:Password!@localhost/mydb'
