--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,4 +2,4 @@
 url = 'sqlite:///mydb.db'
 
 [connections.mssql]
-url = 'mssql+pymssql://sa:Password!@localhost/mydb'
+url = 'mssql+pymssql://sa:Password!@localhost:1433/mydb'
